--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -12,7 +12,7 @@
       <div class="col-lg-4 col-md-4">
         <img class="img-responsive" src="img/example-logo.png" alt="Logo">
       </div>
-      <div class="col-lg-4 col-md-4">
+      <div class="col-lg-4 offset-lg-4 col-md-4 offset-lg-4 align-self-end">
         <div class="text-right">
           <img src="img/Facebook_Color.png" alt="FacebookIcon">
           <img src="img/Twitter-Color.png" alt="TwitterIcon">
@@ -20,16 +20,56 @@
         </div>
       </div>
     </header>
-    <nav class="navbar navbar-dark">
-      <ul class="nav justify-content-center">
+    <nav class="navbar bg-dark justify-content-center">
+      <ul class="nav">
         <li class="nav-item"><a class="nav-link active" href="#">Inicio</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Link 1</a></li>
+        <li class="nav-item"><a class="nav-link " href="#">Link 1</a></li>
         <li class="nav-item"><a class="nav-link" href="#">Link 2</a></li>
         <li class="nav-item"><a class="nav-link" href="#">Link 3</a></li>
         <li class="nav-item"><a class="nav-link" href="#">Link 4</a></li>
         <li class="nav-item"><a class="nav-link" href="#">Link 4</a></li>
       </ul>
     </nav>
+    <section class="row">
+      <section class="col-lg-8 col-md-8">
+        <div class="card border-dark bg-light flex-row">
+          <img class="card-img align-self-start" src="img/music.png" alt="imagenAlbum">
+          <div class="card-body ">
+            <h2 class="card-title">Título del artículo</h2>
+            <p class="card-text text-justify">Donec bibendum, justo vel porta semper, ligula tellus efficitur erat, pellentesque mollis lectus justo ut nisi. Proin pellentesque metus erat, eu vehicula turpis iaculis at. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nullam gravida aliquam magna, id semper tellus. Mauris facilisis elit sed cursus vulputate. Praesent non finibus urna. Vestibulum a bibendum eros.</p>
+            <hr>
+            <footer class="media">
+              <div class="media-body">
+                  <span class="glyphicon glyphicon-user"></span>
+                    <textarea class="form-control" name="name" rows="1" cols="50"></textarea>
+              </div>
+            </footer>
+          </div>
+        </div>
+        <div class="card border-dark bg-light flex-row">
+          <img class="card-img align-self-end" src="img/music.png" alt="imagenAlbum">
+          <div class="card-body ">
+            <h2 class="card-title">Título del artículo</h2>
+            <p class="card-text text-justify">Donec bibendum, justo vel porta semper, ligula tellus efficitur erat, pellentesque mollis lectus justo ut nisi. Proin pellentesque metus erat, eu vehicula turpis iaculis at. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nullam gravida aliquam magna, id semper tellus. Mauris facilisis elit sed cursus vulputate. Praesent non finibus urna. Vestibulum a bibendum eros.</p>
+            <hr>
+            <footer class="media">
+              <div class="media-body">
+                  <span class="glyphicon glyphicon-user"></span>
+                  <textarea class="form-control" name="name" rows="1" cols="50"></textarea>
+              </div>
+            </footer>
+          </div>
+        </div>
+      </section>
+      <aside class="col-lg-4 col-md-4">
+        <div class="card bg-dark">
+          <div class="card-body bg-dark">
+            <input class="form-control rounded" type="text" placeholder="<span class="glyphicon glyphicon-search"></span>" name="" value="">
+          </div>
+        </div>
+      </aside>
+
+    </section>
 
 
 
