--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -31,10 +31,9 @@
       </ul>
     </nav>
     <section class="row">
-      <section class="col-lg-8 col-md-8">
+      <section class="col-lg-9 col-md-9">
         <div class="card border-dark bg-light flex-row">
-          <img class="card-img align-self-start" src="img/music.png" alt="imagenAlbum">
-          <div class="card-body ">
+          <div class="card-body align-self-start">
             <h2 class="card-title">Título del artículo</h2>
             <p class="card-text text-justify">Donec bibendum, justo vel porta semper, ligula tellus efficitur erat, pellentesque mollis lectus justo ut nisi. Proin pellentesque metus erat, eu vehicula turpis iaculis at. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nullam gravida aliquam magna, id semper tellus. Mauris facilisis elit sed cursus vulputate. Praesent non finibus urna. Vestibulum a bibendum eros.</p>
             <hr>
@@ -45,9 +44,10 @@
               </div>
             </footer>
           </div>
+          <img class="card-img" src="img/music.png" alt="imagenAlbum">
         </div>
         <div class="card border-dark bg-light flex-row">
-          <img class="card-img align-self-end" src="img/music.png" alt="imagenAlbum">
+          <img class="card-img" src="img/music.png" alt="imagenAlbum">
           <div class="card-body ">
             <h2 class="card-title">Título del artículo</h2>
             <p class="card-text text-justify">Donec bibendum, justo vel porta semper, ligula tellus efficitur erat, pellentesque mollis lectus justo ut nisi. Proin pellentesque metus erat, eu vehicula turpis iaculis at. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nullam gravida aliquam magna, id semper tellus. Mauris facilisis elit sed cursus vulputate. Praesent non finibus urna. Vestibulum a bibendum eros.</p>
@@ -61,11 +61,10 @@
           </div>
         </div>
       </section>
-      <aside class="col-lg-4 col-md-4">
-        <div class="card bg-dark">
-          <div class="card-body bg-dark">
-            <input class="form-control rounded" type="text" placeholder="<span class="glyphicon glyphicon-search"></span>" name="" value="">
-          </div>
+      <aside class="col-lg-3 col-md-3">
+        <div class="input-group">
+          <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+          <input id="email" type="text" class="form-control" name="email" placeholder="este">
         </div>
       </aside>
 
