--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -23,11 +23,11 @@
       </div>
     </header>
     <nav class="navbar navbar-expand-md bg-dark navbar-dark">
-      <a class="navbar-brand" href="#">Navbar</a>
-      <button class="navbar-toggle" data-toggle="collapse" data-target="#menuDesplegable" type="button" name="button">
+      <a class="navbar-brand" href="#"></a>
+      <button class="navbar-toggler" data-toggle="collapse" data-target="#menuDesplegable" type="button" name="button">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="menuDesplegable">
+      <div class="collapse navbar-collapse align-item-center" id="menuDesplegable">
         <ul class="navbar-nav">
           <li class="nav-item"><a class="nav-link active" href="#">Inicio</a></li>
           <li class="nav-item"><a class="nav-link " href="#">Link 1</a></li>
@@ -37,31 +37,7 @@
           <li class="nav-item"><a class="nav-link" href="#">Link 4</a></li>
         </ul>
       </div>
-
     </nav>
-
-
-    <nav class="navbar navbar-expand-md bg-dark navbar-dark">
-      <!-- Brand -->
-      <a class="navbar-brand" href="#">Navbar</a>
-      <!-- Toggler/collapsibe Button -->
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <!-- Navbar links -->
-      <div class="collapse navbar-collapse" id="collapsibleNavbar">
-        <ul class="navbar-nav">
-          <li class="nav-item"><a class="nav-link" href="#">Link</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Link</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Link</a></li>
-        </ul>
-      </div>
-    </nav>
-
-
-
-
-
     <section class="row">
       <section class="col-lg-9 col-md-9">
         <div class="card border-dark bg-light flex-row">
