--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -27,14 +27,14 @@
       <button class="navbar-toggler" data-toggle="collapse" data-target="#menuDesplegable" type="button" name="button">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse align-item-center" id="menuDesplegable">
-        <ul class="navbar-nav">
+      <div class="collapse navbar-collapse" id="menuDesplegable">
+        <ul class="navbar-nav mx-auto">
           <li class="nav-item"><a class="nav-link active" href="#">Inicio</a></li>
           <li class="nav-item"><a class="nav-link " href="#">Link 1</a></li>
           <li class="nav-item"><a class="nav-link" href="#">Link 2</a></li>
           <li class="nav-item"><a class="nav-link" href="#">Link 3</a></li>
           <li class="nav-item"><a class="nav-link" href="#">Link 4</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Link 4</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Link 5</a></li>
         </ul>
       </div>
     </nav>
@@ -69,12 +69,14 @@
           </div>
         </div>
       </section>
-      <aside class="col-lg-3 col-md-3">
-        <div class="card bg-dark searchCard">
-          <div class="input-group align-self-center">
-            <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-            <input id="email" type="text" class="form-control" name="email" placeholder="este">
-          </div>
+      <aside class="col-lg-3 col-md-3 hidden-sm-down">
+        <div class="card bg-dark align-items-center justify-content-center searchCard">
+          <form class="" action="index.html" method="post">
+            <div class="input-group">
+              <span class="input-group-addon"><i class="glyphicon glyphicon-search"></i></span>
+              <input id="busca" type="text" class="form-control rounded" name="" placeholder="buscar...">
+            </div>
+          </form>
         </div>
         <div class="card">
           <ul class="list-group">
@@ -94,11 +96,7 @@
           </ul>
         </div>
       </aside>
-
     </section>
-
-
-
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
