--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Ligas Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://maxcdn.boots…ap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/estilos.css">
     <title>Blog de Música</title>
   </head>
@@ -40,6 +39,34 @@
     </nav>
     <section class="row">
       <section class="col-lg-9 col-md-9">
+
+        <div class="card border-dark bg-light">
+          <div class="col-lg-8 col-md-8 col-sm-12 card-body">
+            <h2 class="card-title">Título del artículo</h2>
+            <p class="card-text text-justify">Donec bibendum, justo vel porta semper, ligula tellus efficitur erat, pellentesque mollis lectus justo ut nisi. Proin pellentesque metus erat, eu vehicula turpis iaculis at. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nullam gravida aliquam magna, id semper tellus. Mauris facilisis elit sed cursus vulputate. Praesent non finibus urna. Vestibulum a bibendum eros.</p>
+            <hr>
+            <footer class="media">
+              <div class="media-body">
+                  <span class="glyphicon glyphicon-user"></span>
+                    <textarea class="form-control" name="name" rows="1" cols="50"></textarea>
+              </div>
+            </footer>
+          </div>
+          <img class="col-lg-4 col-md-4 card-img" src="img/music.png" alt="imagenAlbum">
+        </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
         <div class="card border-dark bg-light flex-row">
           <div class="card-body">
             <h2 class="card-title">Título del artículo</h2>
@@ -56,7 +83,7 @@
         </div>
         <div class="card border-dark bg-light flex-row">
           <img class="card-img" src="img/music.png" alt="imagenAlbum">
-          <div class="card-body ">
+          <div class="card-body">
             <h2 class="card-title">Título del artículo</h2>
             <p class="card-text text-justify">Donec bibendum, justo vel porta semper, ligula tellus efficitur erat, pellentesque mollis lectus justo ut nisi. Proin pellentesque metus erat, eu vehicula turpis iaculis at. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nullam gravida aliquam magna, id semper tellus. Mauris facilisis elit sed cursus vulputate. Praesent non finibus urna. Vestibulum a bibendum eros.</p>
             <hr>
