--- a/Materialize/index.html
+++ b/Materialize/index.html
@@ -11,33 +11,46 @@
     <title>Blog de Turismo</title>
   </head>
   <body>
-    <header class="row">
-      <div class="col l4">
-        <img class="logo"src="img/example-logo.png" alt="">
+    <div class="capa-transparente">
+      <div class="row" id="cabecera">
+        <div class="col s12">
+          <div class="row">
+            <div class="col l4 m4 s12">
+              <div class="logo">
+                <img src="img/example-logo.png" alt="Imagen" class="responsive-img ">
+              </div>
+            </div>
+            <div class="col l8 m8 s12">
+              <div class="row">
+                <!--Declaramos el menu con div ya que nav tiene propiedades especiales en materialize, esto es lo que hace que los iconos tomen un tamaño mas grande  y que se ponga rosado -->
+                <div class="col s12" id="menu">
+                  <a href="#" class="btn blue "><i class="material-icons left">home</i> Inicio</a>
+                  <a href="#" class="btn blue "><i class="material-icons left">star</i> Mejores Viajes</a>
+                  <a href="#" class="btn blue "><i class="material-icons left">placer</i> Estuve en</a>
+                  <a href="#" class="btn blue "><i class="material-icons left">mode_comment</i> Recomendaciones</a>
+                </div>
+                <div class="col s12 white-text" id="titulo">
+                  <h1>Viajando por Veracruz</h1>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="col l8">
-        <nav class="row">
-          <a class="blue btn"><i class="material-icons left">home</i><span>Inicio</span></a>
-          <a class="btn blue"><i class="material-icons left">star</i><span>Mejores Viajes</span></a>
-          <a class="btn blue"><i class="material-icons left">place</i>Estuve en</a>
-          <a class="btn blue"><i class="material-icons left">mode_comment</i>Recomendaciones</a>
-        </nav>
-        <h4 class="row">Viajando por Veracruz</h4>
-      </div>
-    </header>
+    </div>
     <section class="row">
-      <aside class="col l2">
-        <figure>
+      <aside class="col l1 m1 hide-on-small-only">
+        <figure class="center-align">
             <img src="img/facebook_Color.png" alt="">
         </figure>
-        <figure>
+        <figure class="center-align">
             <img src="img/Twitter-Color.png" alt="">
         </figure>
-        <figure>
+        <figure class="center-align">
             <img src="img/Youtube_Color.png" alt="">
         </figure>
       </aside>
-      <div class="col l10">
+      <div class="col l11 m11 s12">
           <div class="row">
             <picture class="col l4">
               <img class="responsive-img" src="img/palacio.jpg" alt="">
@@ -53,8 +66,8 @@
           </div>
       </div>
       <section class="row">
-        <div class="container col l8">
-          <article>
+        <div class="container col l8 m8 s12">
+          <article class="card-panel">
             <h2>Este es un título</h2>
             <div class="container-img">
               <img class="articlcle-img" src="img/parapente.jpg" alt="">
@@ -62,26 +75,28 @@
             <p class="justify-align">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             <p class="justify-align">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
           </article>
-          <div class="row card-panel blue">
-            <form class="" action="index.html" method="post">
-              <div class="input-field col s6">
-                <i class="material-icons prefix">account_circle</i>
-                <input id="icon_prefix" type="text" class="validate">
-                <label for="icon_prefix">Nombre</label>
-              </div>
-              <div class="input-field col s12">
-                <i class="material-icons prefix">mode_edit</i>
-                <textarea id="icon_prefix2" class="materialize-textarea"></textarea>
-                <label for="icon_prefix2">Comentario</label>
-                <button class="btn center-align" type="button" name="button">Enviar</button>
-              </div>
-            </form>
+          <div class="row">
+            <div class="card-panel blue">
+              <form class="row" action="index.html" method="post">
+                <div class="input-field col s6">
+                  <i class="material-icons prefix">account_circle</i>
+                  <input id="icon_prefix" type="text" class="validate">
+                  <label for="icon_prefix">Nombre</label>
+                </div>
+                <div class="input-field col s12">
+                  <i class="material-icons prefix">mode_edit</i>
+                  <textarea id="icon_prefix2" class="materialize-textarea"></textarea>
+                  <label for="icon_prefix2">Comentario</label>
+                  <button class="btn center-align" type="button" name="button">Enviar</button>
+                </div>
+              </form>
+            </div>
           </div>
 
         </div>
-        <aside class="col l4">
+        <aside class="col l4 m4 s12">
           <div class="row">
-            <div class="col s12 m7">
+            <div class="col s12">
               <div class="card-panel">
                 <div class="card-image">
                   <img class="circle responsive-img" src="img/persona2.jpg">
@@ -93,8 +108,8 @@
                   </div>
                 </div>
               </div>
-            </div>
-        </aside>
+            </aside>
+        </div>
       </section>
 
     </section>
